syntax = "proto3";

package go.micro.srv.PutUserInfo;

service Example {
	rpc PutUserInfo(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	string Name = 2;
}

message Response {
	string ErrCode = 1;
	string ErrMsg = 2;
	string Name = 3;
}
